--- a/index.html
+++ b/index.html
@@ -35,22 +35,13 @@
 				<div class="stitch-1"></div>
 				<div class="clear"></div>
 				<div class="content-body">
-					<p>Oh no! The professor will hit me! But if Zoidberg 'fixes' it&hellip; then perhaps gifts! Say what? It's just like the story of the grasshopper and the octopus. All year long, the grasshopper kept burying acorns for winter, while the octopus mooched off his girlfriend and watched TV. But then the winter came, and the grasshopper died, and the octopus ate all his acorns. Also he got a race car. Is any of this getting through to you?</p>
-					<h2>Obsoletely Fabulous</h2>
-					<p>I barely knew Philip, but as a clergyman I have no problem telling his most intimate friends all about him. Anyone who laughs is a communist! Please, Don-Bot&hellip; look into your hard drive, and open your mercy file! I had more, but you go ahead. But I know you in the future. I cleaned your poop.</p>
-					<ul>
-						<li>Ah, the 'Breakfast Club' soundtrack!  I can't wait til I'm old enough to feel ways about stuff!</li>
-						<li>I can explain. It's very valuable.</li>
-						<li>You won't have time for sleeping, soldier, not with all the bed making you'll be doing.</li>
-					</ul>
+					<h2>About Us</h2>
+					<p>Web Design &amp; Development is what we do here at Black Rabbit Development. And we love our jobs. We take great pride in our work and in providing the very best, highest quality, cutting ..est edge products to our clients. YOU make our world go 'round.</p>
+					<h2>Black Rabbit</h2>
+					<p>Our home office is based out of Utah.</p>
 				</div>
 
-				<h3 class="content-title">Proposition Infinity</h3>
-				<div class="clear"></div>
-				<div class="content-body">
-					<p>With gusto. Hello, little man. I will destroy you! Oh, how awful. Did he at least die painlessly? &hellip;To shreds, you say. Well, how is his wife holding up? &hellip;To shreds, you say. Kids have names? With a warning label this big, you know they gotta be fun!</p>
-				</div>
-				<h4 class="content-title" id="work">Work / Portfolio</h4>
+				<h1 class="content-title" id="work">Work / Portfolio</h1>
 				<div class="stitch-2"></div>
 				<div class="clear"></div>
 				<div class="content-body">
@@ -62,30 +53,8 @@
 						<li>You are the last hope of the universe.</li>
 					</ol>
 				</div>
-				<h5 class="content-title">Mother's Day</h5>
-				<div class="clear"></div>
-				<div class="content-body">
-					<p>Now what? Look, everyone wants to be like Germany, but do we really have the pure strength of 'will'? You're going back for the Countess, aren't you? Oh, all right, I am. But if anything happens to me, tell them I died robbing some old man. Bender, being God isn't easy. If you do too much, people get dependent on you, and if you do nothing, they lose hope. You have to use a light touch. Like a safecracker, or a pickpocket.</p><h1>A Tale of Two Santas</h1>
-					<p>Oh no! The professor will hit me! But if Zoidberg 'fixes' it&hellip; then perhaps gifts! Say what? It's just like the story of the grasshopper and the octopus. All year long, the grasshopper kept burying acorns for winter, while the octopus mooched off his girlfriend and watched TV. But then the winter came, and the grasshopper died, and the octopus ate all his acorns. Also he got a race car. Is any of this getting through to you?</p>
-					<h2>Obsoletely Fabulous</h2>
-					<p>I barely knew Philip, but as a clergyman I have no problem telling his most intimate friends all about him. Anyone who laughs is a communist! Please, Don-Bot&hellip; look into your hard drive, and open your mercy file! I had more, but you go ahead. But I know you in the future. I cleaned your poop.</p>
-					<ul>
-						<li>Ah, the 'Breakfast Club' soundtrack!  I can't wait til I'm old enough to feel ways about stuff!</li>
-						<li>I can explain. It's very valuable.</li>
-						<li>You won't have time for sleeping, soldier, not with all the bed making you'll be doing.</li>
-					</ul>
-					<h3>Proposition Infinity</h3>
-					<p>With gusto. Hello, little man. I will destroy you! Oh, how awful. Did he at least die painlessly? &hellip;To shreds, you say. Well, how is his wife holding up? &hellip;To shreds, you say. Kids have names? With a warning label this big, you know they gotta be fun!</p>
-					<h4>Jurassic Bark</h4>
-					<p>I'm sure those windmills will keep them cool. I meant 'physically'. Look, perhaps you could let me work for a little food? I could clean the floors or paint a fence, or service you sexually? Oh, I always feared he might run off like this. Why, why, why didn't I break his legs? Kif might! Anyone who laughs is a communist! For the last time, I don't like lilacs!  Your 'first' wife was the one who liked lilacs!</p>
-					<ol>
-						<li>Does anybody else feel jealous and aroused and worried?</li>
-						<li>You won't have time for sleeping, soldier, not with all the bed making you'll be doing.</li>
-						<li>For the last time, I don't like lilacs!  Your 'first' wife was the one who liked lilacs!</li>
-						<li>You are the last hope of the universe.</li>
-					</ol>
-				</div>
-				<h5 class="content-title" id="contact">Contact Us</h5>
+				
+				<h1 class="content-title" id="contact">Contact Us</h1>
 				<div class="stitch-3"></div>
 				<div class="clear"></div>
 				<div class="content-body">
