--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<title>Black Rabbit</title>
 
 	<link href="img/favicon.png" type="img/png" rel="icon">
-	<link href="css/reset.css" type="text/css" rel="stylesheet">
-	<link href="css/main.css" type="text/css" rel="stylesheet">
+  <link href="styles/reset.css" type="text/css" rel="stylesheet">
+  <link href="styles/stylesheet.css" type="text/css" rel="stylesheet">
 	<!--[if lt IE 9]>
 	<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
