updating layout, adding social icons, fine tuning animation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <title>Black Rabbit Web Designs</title>
 
-  <link type="img/png" rel="icon" href="favicon.png">
+  <link type="img/png" rel="icon" href="img/favicon.png">
   <link type="text/css" rel="stylesheet" href="styles/main.css">
 
 </head>
@@ -129,16 +129,17 @@
           </ul>
 
           <ul class="social-links">
-            <li>
-              <a href=""></a>
+            <li class="link-facebook">
+              <a href="https://www.facebook.com/Zzaichik" target="_blank">Facebook</a>
             </li>
-            <li>
-              <a href=""></a>
+            <li class="link-twitter">
+              <a href="https://twitter.com/ZzaichikK" target="_blank">Twitter</a>
             </li>
-            <li>
-              <a href=""></a>
+            <li class="link-linkedin">
+              <a href="https://www.linkedin.com/pub/tyler-nielsen/42/964/a75" target="_blank">Linked In</a>
             </li>
           </ul>
+          <p class="copyright">&copy; 2015 Black Rabbit Development</p>
 
         </div>
       </section> <!-- /.contact-section -->
@@ -146,8 +147,6 @@
     </div> <!-- /.main-content -->
   </div> <!-- /.wrapper -->
 
-  <footer>
-  </footer>
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
